--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,16 @@
     <color name="accent">#0288D1</color>
     <color name="windowBackground">#f0f0f0</color>
 
+    <color name="gray">#444444</color>
+
     <color name="vk">#4C75A3</color>
     <color name="google">#D34836</color>
+
+    <!--drawer-->
+    <color name="material_drawer_background">#f0f0f0</color>
+    <color name="material_drawer_primary_text">#444444</color>
+    <color name="material_drawer_divider">#c5c5c5</color>
+    <color name="material_drawer_secondary_text">#444444</color>
+    <color name="material_drawer_selected_text">#0288D1</color>
+
 </resources>
