Create spot list

--- a/app/src/main/res/layout/controller_dashboard.xml
+++ b/app/src/main/res/layout/controller_dashboard.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -12,6 +13,7 @@
         <android.support.v7.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/small"
             app:cardCornerRadius="0dp">
 
             <com.google.android.gms.maps.MapView
@@ -25,6 +27,7 @@
         <android.support.v7.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/small"
             android:layout_marginTop="@dimen/small"
             app:cardCornerRadius="0dp">
 
@@ -32,7 +35,8 @@
                 android:id="@+id/recycler"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:nestedScrollingEnabled="false" />
+                android:nestedScrollingEnabled="false"
+                tools:listitem="@layout/item_spot" />
 
         </android.support.v7.widget.CardView>
 
