--- a/app/src/main/res/layout/controller_add_spot.xml
+++ b/app/src/main/res/layout/controller_add_spot.xml
@@ -25,62 +25,71 @@
             android:layout_height="match_parent"
             app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-            <LinearLayout
-                android:id="@+id/content_layout"
+            <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
+                app:cardCornerRadius="0dp">
 
-                <TextView
-                    android:id="@+id/pick_place"
+                <LinearLayout
+                    android:id="@+id/content_layout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="@dimen/normal"
-                    android:layout_marginStart="@dimen/normal"
-                    android:layout_marginTop="@dimen/normal"
-                    android:background="?attr/selectableItemBackground"
-                    android:clickable="true"
-                    android:drawablePadding="@dimen/small"
-                    android:drawableStart="@drawable/ic_place_red"
-                    android:gravity="center_vertical"
-                    android:padding="@dimen/small"
-                    android:text="Pick a place"
-                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
-                    android:textColor="@color/gray" />
+                    android:layout_marginBottom="@dimen/normal"
+                    android:orientation="vertical">
 
-                <android.support.design.widget.TextInputLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginEnd="@dimen/normal"
-                    android:layout_marginStart="@dimen/normal"
-                    android:hint="Title">
-
-                    <android.support.design.widget.TextInputEditText
-                        android:id="@+id/title"
+                    <TextView
+                        android:id="@+id/pick_place"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Display1" />
+                        android:layout_marginEnd="@dimen/normal"
+                        android:layout_marginStart="@dimen/normal"
+                        android:layout_marginTop="@dimen/normal"
+                        android:background="?attr/selectableItemBackground"
+                        android:clickable="true"
+                        android:drawablePadding="@dimen/small"
+                        android:drawableStart="@drawable/ic_place_red"
+                        android:gravity="center_vertical"
+                        android:padding="@dimen/small"
+                        android:text="Pick a place"
+                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
+                        android:textColor="@color/gray" />
 
-                </android.support.design.widget.TextInputLayout>
-
-                <android.support.design.widget.TextInputLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginEnd="@dimen/normal"
-                    android:layout_marginStart="@dimen/normal"
-                    android:layout_marginTop="@dimen/small"
-                    android:hint="Description">
-
-                    <android.support.design.widget.TextInputEditText
-                        android:id="@+id/description"
+                    <android.support.design.widget.TextInputLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:inputType="textMultiLine"
-                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2" />
+                        android:layout_marginEnd="@dimen/normal"
+                        android:layout_marginStart="@dimen/normal"
+                        android:layout_marginTop="@dimen/small"
+                        android:hint="Title">
 
-                </android.support.design.widget.TextInputLayout>
+                        <android.support.design.widget.TextInputEditText
+                            android:id="@+id/title"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Display1" />
 
-            </LinearLayout>
+                    </android.support.design.widget.TextInputLayout>
+
+                    <android.support.design.widget.TextInputLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="@dimen/normal"
+                        android:layout_marginStart="@dimen/normal"
+                        android:layout_marginTop="@dimen/small"
+                        android:hint="Description">
+
+                        <android.support.design.widget.TextInputEditText
+                            android:id="@+id/description"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:inputType="textMultiLine"
+                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2" />
+
+                    </android.support.design.widget.TextInputLayout>
+
+                </LinearLayout>
+
+            </android.support.v7.widget.CardView>
 
         </ScrollView>
 
