--- a/app/src/main/res/layout/item_spot.xml
+++ b/app/src/main/res/layout/item_spot.xml
@@ -1,7 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="wrap_content"
+    android:clickable="true"
+    android:foreground="?attr/selectableItemBackground">
 
-</LinearLayout>
+    <TextView
+        android:id="@+id/name"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_marginStart="@dimen/normal"
+        android:layout_toStartOf="@+id/route_button"
+        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
+        tools:text="Sinka" />
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/route_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_margin="@dimen/normal"
+        android:layout_marginStart="@dimen/small"
+        android:src="@drawable/ic_route" />
+
+</RelativeLayout>
