--- a/app/src/main/res/layout/controller_add_spot.xml
+++ b/app/src/main/res/layout/controller_add_spot.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.popalay.spotty.view.ElasticDragDismissFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.popalay.spotty.ui.ElasticDragDismissFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -95,4 +95,4 @@
 
     </android.support.design.widget.CoordinatorLayout>
 
-</com.popalay.spotty.view.ElasticDragDismissFrameLayout>
+</com.popalay.spotty.ui.ElasticDragDismissFrameLayout>
