--- a/app/src/main/res/layout/controller_add_spot.xml
+++ b/app/src/main/res/layout/controller_add_spot.xml
@@ -86,6 +86,16 @@
 
                     </android.support.design.widget.TextInputLayout>
 
+                    <Button
+                        android:id="@+id/add_photo"
+                        style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="@dimen/normal"
+                        android:paddingBottom="0dp"
+                        android:paddingTop="0dp"
+                        android:text="App photo" />
+
                 </LinearLayout>
 
             </android.support.v7.widget.CardView>
