--- a/app/src/main/res/layout/footer_add_photo.xml
+++ b/app/src/main/res/layout/footer_add_photo.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ImageView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    android:layout_width="100dp"
+    android:layout_height="100dp"
     android:background="@drawable/border_bg"
     android:clickable="true"
     android:foreground="?attr/selectableItemBackground"
-    android:padding="@dimen/large"
+    android:scaleType="center"
     android:src="@drawable/ic_image" />
