--- a/app/src/main/res/layout/controller_add_spot.xml
+++ b/app/src/main/res/layout/controller_add_spot.xml
@@ -2,7 +2,8 @@
 <com.popalay.spotty.ui.ElasticDragDismissFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <android.support.design.widget.CoordinatorLayout
         android:layout_width="match_parent"
@@ -22,8 +23,8 @@
 
         <ScrollView
             android:layout_width="match_parent"
-            android:scrollbars="none"
             android:layout_height="match_parent"
+            android:scrollbars="none"
             app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
             <android.support.v7.widget.CardView
@@ -87,12 +88,40 @@
 
                     </android.support.design.widget.TextInputLayout>
 
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_marginTop="@dimen/small"
+                        android:orientation="horizontal"
+                        android:paddingEnd="@dimen/normal"
+                        android:paddingStart="@dimen/normal">
+
+                        <TextView
+                            style="@style/Base.TextAppearance.AppCompat.Body2"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:text="@string/pick_up_to_4_photos"
+                            android:textColor="@color/gray" />
+
+                        <TextView
+                            android:id="@+id/photos_count"
+                            style="@style/Base.TextAppearance.AppCompat.Body2"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:gravity="end"
+                            tools:text="0/4"
+                            android:textColor="@color/gray" />
+
+                    </LinearLayout>
+
                     <android.support.v7.widget.RecyclerView
                         android:id="@+id/recycler"
-                        android:layout_width="match_parent"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:overScrollMode="never"
                         android:nestedScrollingEnabled="false"
+                        android:overScrollMode="never"
                         android:padding="@dimen/normal" />
 
                 </LinearLayout>
