--- a/app/src/main/res/layout/item_photo.xml
+++ b/app/src/main/res/layout/item_photo.xml
@@ -1,9 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.facebook.drawee.view.SimpleDraweeView android:id="@+id/photo"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="100dp"
     android:layout_height="100dp"
-    android:clickable="true"
-    android:foreground="?attr/selectableItemBackground"
-    app:roundedCornerRadius="2dp" />
+    android:layout_marginEnd="@dimen/small"
+    android:background="@drawable/border_bg">
+
+    <com.facebook.drawee.view.SimpleDraweeView
+        android:id="@+id/photo"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:clickable="true"
+        android:foreground="?attr/selectableItemBackground"
+        app:roundedCornerRadius="2dp" />
+
+    <ImageView
+        android:id="@+id/btn_remove"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_gravity="end"
+        android:layout_margin="2dp"
+        android:background="@drawable/round_bg"
+        android:padding="@dimen/small"
+        android:src="@drawable/ic_clear"
+        android:visibility="gone"
+        tools:visibility="visible" />
+
+</FrameLayout>
