--- a/app/src/main/res/layout/item_photo.xml
+++ b/app/src/main/res/layout/item_photo.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout android:id="@+id/box"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="100dp"
@@ -17,12 +18,15 @@
 
     <ImageView
         android:id="@+id/btn_remove"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
+        android:layout_width="16dp"
+        android:layout_height="16dp"
         android:layout_gravity="end"
-        android:layout_margin="2dp"
+        android:layout_margin="@dimen/small"
         android:background="@drawable/round_bg"
-        android:padding="@dimen/small"
+        android:clickable="true"
+        android:elevation="1dp"
+        android:foreground="?attr/selectableItemBackground"
+        android:padding="2dp"
         android:src="@drawable/ic_clear"
         android:visibility="gone"
         tools:visibility="visible" />
