--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,8 @@
     <color name="accent">#0288D1</color>
     <color name="windowBackground">#f0f0f0</color>
 
+    <color name="accentTransparent">#960288d1</color>
+
     <color name="gray">#444444</color>
     <color name="lite_gray">#a1a1a1</color>
     <color name="red">#e57373</color>
