--- a/app/src/main/res/layout/controller_spot_details.xml
+++ b/app/src/main/res/layout/controller_spot_details.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.popalay.spotty.ui.ElasticDragDismissFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:pv="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools">
+    android:layout_height="match_parent">
 
     <android.support.design.widget.CoordinatorLayout
         android:layout_width="match_parent"
@@ -24,6 +24,7 @@
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:background="@color/windowBackground"
             android:scrollbars="none"
             app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
@@ -32,7 +33,21 @@
                 android:layout_height="wrap_content"
                 app:cardCornerRadius="0dp">
 
+                <com.github.ybq.parallaxviewpager.ParallaxViewPager
+                    android:id="@+id/photos_pager"
+                    android:layout_width="match_parent"
+                    android:layout_height="150dp"
+                    pv:mode="oneLine"
+                    pv:outset="62%"
+                    pv:shadow_width="30dp" />
 
+                <com.pixelcan.inkpageindicator.InkPageIndicator
+                    android:id="@+id/indicator"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="bottom"
+                    android:layout_marginBottom="@dimen/small"
+                    app:currentPageIndicatorColor="@color/accent" />
 
             </android.support.v7.widget.CardView>
 
