--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,6 +9,7 @@
         <item name="android:windowBackground">@color/windowBackground</item>
         <item name="android:fitsSystemWindows">true</item>
         <item name="editTextStyle">@style/AppTheme.EditText</item>
+        <item name="android:windowContentTransitions">true</item>
     </style>
 
     <style name="AppTheme.EditText" parent="Base.Widget.AppCompat.EditText">
