--- a/app/src/main/res/layout/header_drawer.xml
+++ b/app/src/main/res/layout/header_drawer.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -8,10 +9,13 @@
     android:orientation="vertical"
     android:padding="@dimen/normal">
 
-    <ImageView
+    <com.facebook.drawee.view.SimpleDraweeView
         android:id="@+id/image_profile"
         android:layout_width="64dp"
         android:layout_height="64dp"
+        app:roundAsCircle="true"
+        app:roundingBorderColor="@color/windowBackground"
+        app:roundingBorderWidth="1dp"
         tools:background="@color/accent" />
 
     <TextView
