--- a/app/src/main/res/layout/controller_spot_details.xml
+++ b/app/src/main/res/layout/controller_spot_details.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.popalay.spotty.ui.ElasticDragDismissFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.popalay.spotty.widgets.ElasticDragDismissFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -79,4 +79,4 @@
 
     </android.support.design.widget.CoordinatorLayout>
 
-</com.popalay.spotty.ui.ElasticDragDismissFrameLayout>
+</com.popalay.spotty.widgets.ElasticDragDismissFrameLayout>
