--- a/app/src/main/res/layout/controller_dashboard.xml
+++ b/app/src/main/res/layout/controller_dashboard.xml
@@ -1,51 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fillViewport="true"
     android:scrollbars="none">
 
-    <LinearLayout
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
-
-        <android.support.v7.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:cardCornerRadius="0dp">
-
-            <com.popalay.spotty.widgets.ScrolledMapView
-                android:id="@+id/map_view"
-                android:layout_width="match_parent"
-                android:layout_height="300dp"
-                android:apiKey="@string/maps_api_key" />
-
-        </android.support.v7.widget.CardView>
+        android:layout_height="wrap_content">
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/contentView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/small"
-            android:nestedScrollingEnabled="false"
             tools:listitem="@layout/item_spot" />
 
         <ProgressBar
             android:id="@+id/loadingView"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_gravity="center" />
 
         <TextView
             android:id="@+id/errorView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:textAllCaps="true" />
 
-    </LinearLayout>
+    </FrameLayout>
 
 </ScrollView>
