--- a/app/src/main/res/menu/drawer.xml
+++ b/app/src/main/res/menu/drawer.xml
@@ -3,6 +3,11 @@
 
     <group android:checkableBehavior="single">
         <item
+            android:id="@+id/dashboard"
+            android:checked="true"
+            android:icon="@drawable/ic_dashboard"
+            android:title="Dashboard" />
+        <item
             android:id="@+id/map"
             android:icon="@drawable/ic_map"
             android:title="Map" />
