--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
 
     <color name="accentTransparent">#960288d1</color>
 
+    <color name="white">#FFF</color>
     <color name="gray">#444444</color>
     <color name="lite_gray">#a1a1a1</color>
     <color name="red">#e57373</color>
