--- a/app/src/main/res/layout/controller_spot_details.xml
+++ b/app/src/main/res/layout/controller_spot_details.xml
@@ -1,106 +1,97 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.popalay.spotty.widgets.ElasticDragDismissFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <android.support.design.widget.CoordinatorLayout
+    <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:fitsSystemWindows="true"
+        android:theme="@style/AppTheme.AppBarOverlay">
 
-        <android.support.design.widget.AppBarLayout
+        <android.support.design.widget.CollapsingToolbarLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:theme="@style/AppTheme.AppBarOverlay">
+            app:contentScrim="?attr/colorPrimary"
+            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">
+
+            <com.github.ybq.parallaxviewpager.ParallaxViewPager
+                android:id="@+id/photos_pager"
+                android:layout_width="match_parent"
+                android:layout_height="300dp"
+                app:layout_collapseMode="parallax"
+                app:mode="right_overlay"
+                app:outset="62%"
+                app:shadow_width="30dp" />
+
+            <com.pixelcan.inkpageindicator.InkPageIndicator
+                android:id="@+id/indicator"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom"
+                android:layout_marginBottom="@dimen/small"
+                app:currentPageIndicatorColor="@color/accent" />
 
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize" />
+                android:layout_height="?attr/actionBarSize"
+                android:fitsSystemWindows="false"
+                app:layout_collapseMode="pin" />
 
-        </android.support.design.widget.AppBarLayout>
+        </android.support.design.widget.CollapsingToolbarLayout>
 
-        <ScrollView
+    </android.support.design.widget.AppBarLayout>
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/windowBackground"
+        android:scrollbars="none"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@color/windowBackground"
-            android:scrollbars="none"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior">
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/small"
+            android:orientation="vertical">
 
-            <LinearLayout
+            <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:layout_marginBottom="@dimen/small"
+                app:contentPadding="@dimen/normal">
 
-                <android.support.v7.widget.CardView
+                <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    app:cardCornerRadius="0dp">
+                    android:layout_height="wrap_content">
 
-                    <com.github.ybq.parallaxviewpager.ParallaxViewPager
-                        android:id="@+id/photos_pager"
-                        android:layout_width="match_parent"
-                        android:layout_height="150dp"
-                        app:mode="right_overlay"
-                        app:outset="62%"
-                        app:shadow_width="30dp" />
+                    <com.facebook.drawee.view.SimpleDraweeView
+                        android:id="@+id/authorProfileImage"
+                        android:layout_width="56dp"
+                        android:layout_height="56dp"
+                        android:layout_marginEnd="@dimen/normal"
+                        app:roundAsCircle="true"
+                        app:roundingBorderColor="@color/windowBackground"
+                        app:roundingBorderWidth="1dp"
+                        tools:background="@color/accent" />
 
-                    <com.pixelcan.inkpageindicator.InkPageIndicator
-                        android:id="@+id/indicator"
-                        android:layout_width="match_parent"
+                    <TextView
+                        android:id="@+id/authorName"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="bottom"
-                        android:layout_marginBottom="@dimen/small"
-                        app:currentPageIndicatorColor="@color/accent" />
+                        android:layout_gravity="center_vertical"
+                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
+                        tools:text="ddsfsfsfsfsfsf" />
 
-                </android.support.v7.widget.CardView>
+                </LinearLayout>
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:padding="@dimen/small"
-                    android:text="Author"
-                    android:textAllCaps="true"
-                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead" />
+            </android.support.v7.widget.CardView>
 
-                <android.support.v7.widget.CardView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="@dimen/small"
-                    app:contentPadding="@dimen/normal">
+        </LinearLayout>
 
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
+    </ScrollView>
 
-                        <com.facebook.drawee.view.SimpleDraweeView
-                            android:id="@+id/authorProfileImage"
-                            android:layout_width="56dp"
-                            android:layout_height="56dp"
-                            android:layout_marginEnd="@dimen/normal"
-                            app:roundAsCircle="true"
-                            app:roundingBorderColor="@color/windowBackground"
-                            app:roundingBorderWidth="1dp"
-                            tools:background="@color/accent" />
-
-                        <TextView
-                            android:id="@+id/authorName"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center_vertical"
-                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
-                            tools:text="ddsfsfsfsfsfsf" />
-
-                    </LinearLayout>
-
-                </android.support.v7.widget.CardView>
-
-            </LinearLayout>
-
-        </ScrollView>
-
-    </android.support.design.widget.CoordinatorLayout>
-
-</com.popalay.spotty.widgets.ElasticDragDismissFrameLayout>
+</android.support.design.widget.CoordinatorLayout>
