--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,10 +6,11 @@
     <color name="windowBackground">#f0f0f0</color>
 
     <color name="accentTransparent">#960288d1</color>
+    <color name="divider">@color/windowBackground</color>
 
     <color name="white">#FFF</color>
     <color name="gray">#444444</color>
-    <color name="lite_gray">#a1a1a1</color>
+    <color name="light_gray">#a1a1a1</color>
     <color name="red">#e57373</color>
 
     <color name="vk">#4C75A3</color>
