--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,7 +6,9 @@
     <dimen name="large">32dp</dimen>
     <dimen name="empty">0dp</dimen>
 
+    <dimen name="small_elevation">8dp</dimen>
     <dimen name="default_elevation">8dp</dimen>
+
     <dimen name="divider_size">1dp</dimen>
     <dimen name="divider_margin">72dp</dimen>
 
